--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3"
   }
 }
